--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
+    "moment": "^2.29.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
